@@ -1,1 +1,5 @@
+# The very top-level Makefile.  In our case, we only have one directory
+# which contains anything to build, and no optional components or anything
+# fancy.
+
 SUBDIRS = src
