@@ -1,3 +1,12 @@
+# This package contains a single executable that we wish to build, named
+# "hellow".
+
+# Declare that "hellow" is the name of a binary we wish to build.
+# The "bin_" prefix means that the installation behaviour of this program
+# should be to copy it to $(bindir), one of automake's standard directory
+# variables.
 bin_PROGRAMS = hellow
 
+# Define the list of source files that must be compiled to produce the
+# "hellow" binary.
 hellow_SOURCES = hellow.cxx
