@@ -1,0 +1,3 @@
+There is a whole art to producing good news files, which I will not even
+attempt to cover here.  For now, it will suffice to say that "autoreconf -fi"
+will barf if this file is not present.
